gitops/config/evolution-api/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evolution-api
  namespace: apps
  labels:
    app: evolution-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: evolution-api
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: evolution-api
    spec:
      containers:
        - name: evolution-api
          image: docker.io/evoapicloud/evolution-api:v2.3.7
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 768Mi
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
