gitops/config/evolution-api/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: evolution-api
  namespace: apps
spec:
  selector:
    app: evolution-api
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
