gitops/config/evolution-api/manifests/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: evolution-api
  namespace: apps
  annotations:
    external-dns.alpha.kubernetes.io/hostname: evolution.nieri0x73.com
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: evolution-api-tls
      hosts:
        - evolution.nieri0x73.com
    - port:
        number: 80
        name: http
        protocol: HTTP
      tls:
        httpsRedirect: true
      hosts:
        - evolution.nieri0x73.com
