gitops/config/evolution-api/manifests/virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: evolution-api
  namespace: apps
spec:
  hosts:
    - evolution.nieri0x73.com
  gateways:
    - evolution-api
  http:
    - route:
        - destination:
            host: evolution-api
            port:
              number: 8080
